<resources>
    <string name="audio">Audio</string>
    <string name="audio_setting">Audio Setting</string>
    <string name="accel">Accel</string>
    <string name="account">Account</string>
    <string name="add_clip_hint2">to add a highlight or footage</string>
    <string name="add_more_clips">Add More Clips</string>
    <string name="add_music">Add Music</string>
    <string name="add_new_camera">Setup new camera</string>
    <string name="after">After</string>
    <string name="already_a_member">Already a member?</string>
    <string name="also_post_on">Also share on other social network:</string>
    <string name="app_name">Waylens</string>
    <string name="apply">Apply</string>
    <string name="avatar">Avatar</string>
    <string name="backpressed_hint">Press RETURN again to end the program</string>
    <string name="before">Before</string>
    <string name="birthday">Birthday</string>
    <string name="bookmark">highlight</string>
    <string name="bookmark_update_error">Failed to modify the highlight</string>
    <string name="bookmark_update_successful">Highlight is updated</string>
    <string name="brake">Brake</string>
    <string name="bump">Bump</string>
    <string name="camera">Camera</string>
    <string name="camera_name">Camera Name</string>
    <string name="camera_power_is_on">"1. Your camera has been powered on."</string>
    <string name="cannot_find_camera">Failed to detect a camera, please make sure:</string>
    <string name="change_camera_setting">Change Camera Setting</string>
    <string name="change_camera_setting_hint">"This action will terminate video recording if it's on. Continue?"</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_failed">Change password failed</string>
    <string name="change_password_successfully">Password changed successfully</string>
    <string name="change_theme_hint">Switching themes will take effects after the app restarts</string>
    <string name="change_username">Change Username</string>
    <string name="check_update">Check Update</string>
    <string name="choose_your_home_wifi">Select your preferred Wi-Fi network</string>
    <string name="click_2_login">Click to login</string>
    <string name="clip_from">Use clips from</string>
    <string name="comment">Comment</string>
    <string name="confirm_bookmark_add">Highlight successfully</string>
    <string name="confirm_logout">Logout?</string>
    <string name="connect_successfully">Camera connected successfully</string>
    <string name="connected_before">Or one you have connected before</string>
    <string name="continuous">Continuous</string>
    <string name="continuous_info">Recording continues even after the storage gets full, overwriting earliest non-highlighted footage</string>
    <string name="continuous_recording">Continuous Recording</string>
    <string name="create_new_account">Create a new Account</string>
    <string name="create_smart_remix">Create a smart remix</string>
    <string name="current_version">Current Version: </string>
    <string name="delete">Delete</string>
    <string name="delete_bookmark_confirm">Deleting highlights is irreversible, are you sure?</string>
    <string name="discard">Discard </string>
    <string name="discard_enhance_confirm">Your editing will NOT be saved. Confirm to proceed?</string>
    <string name="discard_the_enhance">Discard edits</string>
    <string name="distance_restrict">"3. Your mobile phone is within 30-meter radius of your camera."</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="email">Email</string>
    <string name="email_error">Input a valid email address</string>
    <string name="email_has_been_used">The email address has been used</string>
    <string name="enhance">Enhance</string>
    <string name="error_check_fir">Error! Failed to check latest version</string>
    <string name="error_loading_musics">Failed to load the music list, \n check the network.</string>
    <string name="error_msg_no_card">Failed to detect micro-SD card on this camera.</string>
    <string name="error_sdcard_error">SD card error!</string>
    <string name="error_sdcard_full">SD card full!</string>
    <string name="error_no_connection">Failed to connect to Waylens cloud service.</string>
    <string name="error_no_write_external_storage_permission">Grant the permission of "Write external storage" and try again.</string>
    <string name="failed">Failed</string>
    <string name="female">Female</string>
    <string name="fir_version">The latest version is</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="forget_password">Forgot Password</string>
    <string name="forget_password_hint1">Forgot Password?</string>
    <string name="forgot_password_hint2">Find it back</string>
    <string name="forgot_password_hint3">An email has been sent for further validation.</string>
    <string name="forgot_password_hint4">Input the code received in your email</string>
    <string name="forgot_password_hint5">Have\'t received the email?</string>
    <string name="gender">Gender</string>
    <string name="general">General</string>
    <string name="get_started">Get Started</string>
    <string name="get_url_failed">Failed to obtain the URL for playback</string>
    <string name="help">Help</string>
    <string name="initial_setup">Initial Setup</string>
    <string name="install_now">Install Now</string>
    <string name="join">Join</string>
    <string name="lable_buffered_video">Buffered</string>
    <string name="leave">Leave</string>
    <string name="length_of_remix">Length of Remix</string>
    <string name="like">like</string>
    <string name="like_your_post">like your post</string>
    <string name="live_view">Live View</string>
    <string name="loading">Loading...</string>
    <string name="login">Login</string>
    <string name="login_cancelled">Login cancelled</string>
    <string name="login_error_facebook">Error occurred while connecting to Facebook</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Logout?</string>
    <string name="male">Male</string>
    <string name="manual">Manual</string>
    <string name="manual_info">The entire video clip is marked as a highlight when manually recorded</string>
    <string name="me">Me</string>
    <string name="mobile_wifi_is_on">"2. Wi-Fi of your mobile phone is on."</string>
    <string name="modify">Modify</string>
    <string name="moments">Moments</string>
    <string name="msg_no_sdcard">No Micro-SD Card</string>
    <string name="msg_no_space">Not enough space on the Micro-SD Card</string>
    <string name="msg_video_too_long">Video clip is too long to download</string>
    <string name="musics">Music</string>
    <string name="my_feed">News Feed</string>
    <string name="new_comments_notification">New comments on moment</string>
    <string name="new_password">New Password</string>
    <string name="next">Next</string>
    <string name="no_bookmark">No Highlights Found</string>
    <string name="no_bookmark_help">"You can add a highlight by:\n\n1. Pressing the remote control button during recording.\n2. Using the software to add one when browsing buffered footage."</string>
    <string name="no_footage">No footage found</string>
    <string name="no_footage_help">"Buffered footage are video clips that can be automatically erased with the oldest footage overwritten by the freshest. Start filling buffered video by turning on the car engine!"</string>
    <string name="no_signal">You have not connected any camera</string>
    <string name="no_title">No Title</string>
    <string name="old_password">Old Password</string>
    <string name="or">OR</string>
    <string name="password">Password</string>
    <string name="password_error">Password must contain 6~32 characters, numbers, and cannot contain the following special characters: &#033;&#035;&#036;&#037;&#038;&#042;&#043;&#045;&#064;&#094;&#095;&#046;&#126;</string>
    <string name="phone_camera">Camera of the phone</string>
    <string name="please_open_your_camera">Turn on the camera and load the QR code</string>
    <string name="please_register">You can still register your Home Wi-Fi in the bookmark homepage</string>
    <string name="profile">Profile</string>
    <string name="providing_access">Requesting access to the camera of your phone, with which you can scan the QR code and retrieve Wi-Fi info of the camera</string>
    <string name="rather_not_to_say">"I'd rather not say"</string>
    <string name="record_loop_recording">Loop Recording</string>
    <string name="record_recording">Recording</string>
    <string name="record_starting">Recording being started</string>
    <string name="record_stopped">Ready for recording</string>
    <string name="recording_quality">Recording Quality</string>
    <string name="region">Region</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="skip">Skip</string>
    <string name="step1">1. Scan the QR code on your camera</string>
    <string name="step2">"2. Connect your phone to the camera's Hotspot as a Wi-Fi client"</string>
    <string name="step3">"3. Connect the camera to your preferred Wi-Fi network"</string>
    <string name="try_again">Try Again</string>
    <string name="update_now">Update Now</string>
    <string name="upload">Upload</string>
    <string name="username">Username</string>
    <string name="video">Video </string>
    <string name="mic">Microphone</string>
    <string name="speaker">Speaker</string>
    <string name="connectivity">Connectivity</string>
    <string name="power">Power</string>
    <string name="firmware">Firmware</string>
    <string name="resolution">Resolution</string>
    <string name="framerate">Framerate</string>
    <string name="highlights">Highlights</string>
    <string name="welcome16">"your driving wheel"</string>
    <string name="steps">"Three steps to set up your camera's Wi-Fi connectivity"</string>
    <string name="welcome31">"Friends' cheers are only several taps away"</string>
    <string name="welcome32">Driving is only half the fun, getting your memorable moments hared with your friends only requires a few taps. Video and data never need to leave the camera during editing.</string>
    <string name="welcome33">best moments</string>
    <string name="welcome34">of your footage and share</string>
    <string name="welcome35">with the community</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="facebook">Facebook</string>
    <string name="social_media">Social Media</string>
    <string name="youtube">Youtube</string>
    <string name="vehicle">Vehicle</string>
    <string name="add_car">Add a Car</string>
    <string name="display">Display</string>
    <string name="timestamp_on_video">Timestamp will be burned on the video</string>
    <string name="speaker_vol">Speaker volume</string>
    <string name="mph30">0-30 mph</string>
    <string name="mph60">0-60 mph</string>
    <string name="kmh50">0-50 km/h</string>
    <string name="kmh100">0-100 km/h</string>
    <string name="switch_to_metric_units">Switch to metric units</string>
    <string name="switch_to_english_units">Switch to english units</string>
    <string name="my_vehicle_info">My Vehicle Info</string>
    <string name="maker">Maker</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="where_i_drove">Where I drove</string>
    <string name="oops">Oops!!</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="check_your_connection">Check your connection and try again</string>
    <string name="timestamp">Timestamp</string>
</resources>