<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <PreferenceCategory
        android:title="@string/account">


        <Preference
            android:key="email"
            android:title="@string/email"/>

        <Preference
            android:key="change_password"
            android:title="@string/change_password"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/profile">

        <Preference
            android:key="user_name"
            android:title="@string/username"/>

        <Preference
            android:key="birthday"
            android:title="@string/birthday"/>

        <Preference
            android:key="gender"
            android:title="@string/gender"/>

        <Preference
        android:key="region"
        android:title="@string/region"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="vehicle"
        android:title="@string/vehicle">

        <Preference
            android:key="add_car"
            android:title="@string/add_car"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/social_media">

        <Preference
            android:key="facebook"
            android:title="@string/facebook"/>

        <Preference
            android:key="youtube"
            android:title="@string/youtube"/>

    </PreferenceCategory>


</PreferenceScreen>