<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:sample="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/general">
        <Preference
            android:key="cameraName"
            android:title="@string/camera_name"/>

        <Preference
            android:key="firmware"
            android:title="@string/firmware"/>
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/video">
        <Preference
            android:key="video"
            android:title="@string/video"/>
    </PreferenceCategory>


    <PreferenceCategory
        android:key="audio"
        android:title="@string/audio">

        <SwitchPreference
            android:key="mic"
            android:title="@string/mic"
            android:drawableTint="@color/style_color_accent"
            android:buttonTint="@color/style_color_accent"
            android:thumbTint="@color/style_color_accent"
            />

        <SwitchPreference
            android:key="speaker"
            android:title="@string/speaker"/>

        <com.waylens.hachi.preference.seekbarpreference.SeekBarPreference
            android:key="speakerVol"
            android:title="@string/speaker_vol"
            android:icon="@drawable/settings_beeps_level"
            android:layout="@layout/preference_seekbar"
            android:dependency="speaker"
            sample:msbp_interval="1"
            sample:msbp_maxValue="10"
            sample:msbp_minValue="0"/>

    </PreferenceCategory>

    <Preference
        android:key="bookmark"
        android:title="@string/highlights"/>


    <Preference
        android:key="storage"
        android:title="@string/storage"/>

    <Preference
        android:key="connectivity"
        android:title="@string/connectivity"/>

    <Preference
        android:key="power"
        android:title="@string/power"/>

    <Preference
        android:key="display"
        android:title="@string/display"/>


</PreferenceScreen>