<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_to_upload"
        android:icon="@drawable/btn_edit_action_share"
        android:title="@string/upload"
        app:showAsAction="always"
        tools:visible="false"/>
    <item
        android:id="@+id/menu_to_enhance"
        android:icon="@drawable/btn_edit_action_video"
        android:title="@string/enhance"
        app:showAsAction="always"
        tools:visible="false"/>
    <item
        android:id="@+id/menu_to_delete"
        android:icon="@drawable/btn_edit_action_delete"
        android:title="@string/delete"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_selete_all"
        android:title="@string/select_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_deselete_all"
        android:title="@string/deselect_all"
        app:showAsAction="never"/>
</menu>