<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_to_share"
        android:icon="@drawable/btn_edit_action_share"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_to_enhance"
        android:icon="@drawable/btn_edit_action_video"
        android:title="@string/enhance"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_to_modify"
        android:icon="@drawable/btn_edit_action_crop"
        android:title="@string/modify"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_to_delete"
        android:icon="@drawable/btn_edit_action_delete"
        android:title="@string/delete"
        app:showAsAction="never" />

</menu>