<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/preference_category_widget">


        <Preference
            android:key="general"
            android:layout="@layout/preference_item_icon"
            android:title="@string/general"
            android:icon="@drawable/settings_menu_general"/>


    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_widget">


        <Preference
            android:key="account"
            android:layout="@layout/preference_item_icon"
            android:title="@string/account"
            android:icon="@drawable/settings_menu_account"/>


    </PreferenceCategory>


    <PreferenceCategory
        android:layout="@layout/preference_category_widget">


        <Preference
            android:key="camera"
            android:layout="@layout/preference_item_icon"
            android:title="@string/camera"
            android:icon="@drawable/settings_menu_camera"/>

        <Preference
            android:key="addCamera"
            android:layout="@layout/preference_item_icon"
            android:title="@string/add_new_camera"
            android:icon="@drawable/settings_menu_camera_add"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:layout="@layout/preference_category_widget">


        <Preference
            android:key="help"
            android:layout="@layout/preference_item_icon"
            android:title="@string/help"
            android:icon="@drawable/settings_menu_help"/>



    </PreferenceCategory>

</PreferenceScreen>