<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/walkthrough3"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome31"
            android:textSize="40sp"
            tools:text="waylens,"
            android:textAllCaps="true"
            android:layout_marginTop="64dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome32"
            android:textSize="40sp"
            tools:text="a data-driven,"
            android:textAllCaps="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome33"
            android:textSize="40sp"
            tools:text="camera"
            android:textAllCaps="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome34"
            android:textSize="14sp"
            tools:text="designed for drivers,"
            android:textAllCaps="true"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome35"
            android:textSize="14sp"
            tools:text="puts fun back behind"
            android:textAllCaps="true"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome16"
            android:textSize="14sp"
            tools:text="your driving wheel."
            android:textAllCaps="true"
            android:layout_marginTop="8dp"
            />

    </LinearLayout>



</FrameLayout>