<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cev="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingTop="24dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    >

    <com.waylens.hachi.ui.views.CompoundEditView
        android:id="@+id/sign_up_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        cev:cevHint="@string/email"
        cev:cevInvalidFormatMessage="@string/email_error"
        cev:cevType="email"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="?attr/appTextColorPrimary"
        android:text="@string/forgot_password_hint3"/>

    <ViewAnimator
        android:id="@+id/button_animator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="48dp">

        <Button
            android:id="@+id/btn_send"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:backgroundTint="?attr/actionButtonColor"
            android:text="@string/send"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </ViewAnimator>
</LinearLayout>