<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/toolbar_default"/>

    <ImageView
        android:id="@+id/waylens_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/waylens_logo_140x98"/>

    <TextView
        android:id="@+id/current_version_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_version"
        android:textColor="?attr/appTextColorPrimary"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/fir_version_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/fir_version"
        android:textColor="?attr/appTextColorPrimary"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:visibility="invisible"/>

    <ViewAnimator
        android:id="@+id/view_animator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_check_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/check_update"/>

        <Button
            android:id="@+id/btn_update_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update_now"/>

        <Button
            android:id="@+id/btn_install_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/install_now"/>

    </ViewAnimator>
</LinearLayout>