<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/defaultBgColor"
                android:orientation="vertical">


    <ImageView
        android:id="@+id/step2_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/steps_image_2"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_below="@id/step2_image"
        android:text="@string/step2"
        android:textColor="@color/text_camera_info"/>

    <TextView
        android:id="@+id/step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/step2_image"
        android:layout_marginBottom="24dp"
        android:text="@string/step1"
        android:textColor="@color/text_camera_info"/>

    <ImageView
        android:id="@+id/step1_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/step1"
        android:src="@drawable/steps_image_1"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/step1_image"
        android:text="@string/steps"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/step3_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/step2"
        android:src="@drawable/steps_image_3"
        android:layout_marginTop="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/step3"
        android:layout_below="@id/step3_image"
        android:textColor="@color/text_camera_info"/>


    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/style_color_primary"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/get_started"/>

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text_camera_info"/>

</RelativeLayout>